fix: change top-bottom gap in pets-cards

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -347,7 +347,7 @@ header {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	gap: 90px 30px;
+	gap: 0 30px;
 }
 
 .card {
